--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <div class="top" id="jump">
 
-     <img class="top-picture" src="/images/TopPicture.jpeg" height="1200px" alt="CaffeePicture">
+     <img class="top-picture" src="Cafev2/images/TopPicture.jpeg" height="1200px" alt="CaffeePicture">
 
   </div>
 
