--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <div class="top" id="jump">
 
-     <img class="top-picture" src="Cafev2/images/TopPicture.jpeg" height="1200px" alt="CaffeePicture">
+     <img class="top-picture" src="./images/TopPicture.jpeg" height="1200px" alt="CaffeePicture">
 
   </div>
 
@@ -114,7 +114,7 @@
         minima rerum!
       </p>
       <div style="overflow: hidden;height: 600px;width: 850px ;margin-top: -200px;float: right;">
-        <img src="/images/Weirdos.png" class="zoomin" style="height: 600px;width: 850px;" alt="staff">
+        <img src="./images/Weirdos.png" class="zoomin" style="height: 600px;width: 850px;" alt="staff">
       </div>
   </div>
 
